--- a/app/views/teachers/deliveries/index.html.erb
+++ b/app/views/teachers/deliveries/index.html.erb
@@ -129,20 +129,20 @@
             <%= link_to t('.show'), delivery, :class => "btn" %>
 
          
-        <% if delivery.limit == "nil"%>
-                  Calificación asignada:  <b class="label-tag calification-bad">0</b>            
+       <% if delivery.limit == "nil"%>
+                  Calificación asignada:  <b class="label-tag calification-bad">0</b>
+            
           <%else%>
            
-          <% @calculus = (delivery.limit/2) if @calculus > 0 %> 
-          <% @calculus = 0 if @calculus == 'nil' %>
-      
+          <% @calculus = (delivery.limit/2)%> 
+              
            <% if delivery.raiting > @calculus %>
           Calificación asignada:  <b class="label-tag calification-good"><%=delivery.raiting %></b>
             <%else%>
            Calificación asignada:  <b class="label-tag calification-bad"><%=delivery.raiting %></b>      
-            <%end%>
-          <%end%>
+           <%end%>
        <%end%>
+      <%end%>
           </div>
         <% end %>
         <%end%>
