--- a/app/views/teachers/deliveries/index.html.erb
+++ b/app/views/teachers/deliveries/index.html.erb
@@ -130,20 +130,16 @@
 
          
        <% if delivery.limit == "nil"%>
-                  Calificación asignada:  <b class="label-tag calification-bad">0</b>
-            
+           <% @calculus = 0%>
           <%else%>
-           <% @nil == "nil"%>
-          <% @calculus = (delivery.limit/2)%> 
-            <% if @calculus = @nil%>
-             <%else%>
+          <% @calculus = (delivery.limit/2)%>    
+       <%end%>
+            
            <% if delivery.raiting > @calculus %>
           Calificación asignada:  <b class="label-tag calification-good"><%=delivery.raiting %></b>
             <%else%>
            Calificación asignada:  <b class="label-tag calification-bad"><%=delivery.raiting %></b>      
            <%end%>
-           <%end%>
-       <%end%>
       <%end%>
           </div>
         <% end %>
