resolviendo bugs de deliveries cuando el objeto calificationame es nulo parte 8

--- a/app/views/teachers/deliveries/index.html.erb
+++ b/app/views/teachers/deliveries/index.html.erb
@@ -130,16 +130,24 @@
 
          
        <% if delivery.limit == "nil"%>
-           <% @calculus = 0%>
-          <%else%>
-          <% @calculus = (delivery.limit/2)%>    
-       <%end%>
-            
+           <% @calculus = 0 %>
+           
            <% if delivery.raiting > @calculus %>
           Calificación asignada:  <b class="label-tag calification-good"><%=delivery.raiting %></b>
             <%else%>
            Calificación asignada:  <b class="label-tag calification-bad"><%=delivery.raiting %></b>      
            <%end%>
+
+          <%else%>
+          <% @calculus = (delivery.limit/2)%>   
+           
+           <% if delivery.raiting > @calculus %>
+          Calificación asignada:  <b class="label-tag calification-good"><%=delivery.raiting %></b>
+            <%else%>
+           Calificación asignada:  <b class="label-tag calification-bad"><%=delivery.raiting %></b>      
+           <%end%> 
+       <%end%>
+          
       <%end%>
           </div>
         <% end %>
