--- a/app/views/supervisor/shared/_suspended.html.erb
+++ b/app/views/supervisor/shared/_suspended.html.erb
@@ -11,6 +11,7 @@
 <!--span 1 inicia-->
 			
      <div class="user padding-all <%= cycle('odd', 'even') %>">
+	<div class="suspended-container">
 			
 				        <div class="span1" style="margin-left:20px;">
 					       <% @user_id = user.id%>
@@ -43,12 +44,11 @@
 				                   <%= view_status.submit "Cambiar status", :class => "reject btn danger"%>
 				                <%end%>
 				             </div>
-				             	<div class=" row line">
-								</div>
+				
 				           </div> 
 
      </div>			
-								              
+	</div>							              
 	 <%else%>
   <%end%> 
 <!-- finaliza div de cambio de status-->
@@ -56,6 +56,6 @@
  	 <!--class row termina-->
 	</div>  
 <%end%>
- </div>
 </div>
 </div>
+
