--- a/app/views/supervisor/shared/_teachers.html.erb
+++ b/app/views/supervisor/shared/_teachers.html.erb
@@ -1,6 +1,7 @@
 <div class="content">
 <% teachers.each do |teacher| %>
   <%if teacher.view_status == 'fantom'%>
+phantom
   <%else%>
   <div class="user padding-all <%= cycle('odd', 'even') %>">
     <div class="teacher">
