--- a/app/views/supervisor/shared/_suspended.html.erb
+++ b/app/views/supervisor/shared/_suspended.html.erb
@@ -4,17 +4,16 @@
 
 <div class="span8" style="margin-bottom:15px;">
 <!-- class row inicia -->
-
 <div class="row">
 	 <%if user.view_status == 'fantom'%>
 					    
 <!--span 1 inicia-->
 			
-     <div class="user padding-all <%= cycle('odd', 'even') %>">
-	<div class="suspended-container">
-			
-				        <div class="span1" style="margin-left:20px;">
-					       <% @user_id = user.id%>
+    <% @user_id = user.id%>
+	 <div class="user padding-all <%= cycle('odd', 'even') %>">
+              <div class="supervisor">
+                <div class="row">		
+				        <div class="span1" style="margin-left:20px;">     
 				          <%= image_tag user.avatar_file.xsmall.url %>
 				        </div>
 <!--span 1 termina -->
@@ -26,15 +25,13 @@
 <!--span 6 termina -->
                   
 <!--inicia div edit role-->
-				              <div class="edit_role span5">
+				              <div class="edit_role span3">
 				                <%= link_to "Reactivar usuario ", 'javascript:void(0)', :class=>"accept btn success small change_role_button" %>
 </div>
 <!--finaliza div edit role-->
                   
 <!-- div del cambio de status-->
                             <div class="spam6" style="display:none;">
-	                       				           </br>
-
 				              <div id="edit_role_form" >
 				                   <h3>Cambiar el status de usuario</h3>
 				                  <%= form_for @status do |view_status|%>
@@ -43,19 +40,20 @@
 				                   <%= view_status.hidden_field :date_status, :value => Time.now %>
 				                   <%= view_status.submit "Cambiar status", :class => "reject btn danger"%>
 				                <%end%>
-				             </div>
-				
-				           </div> 
-
-     </div>			
-	</div>							              
+				              </div>
+          				   </div> 
+                   </div>
+              </div>
+	      </div>	      							              
 	 <%else%>
   <%end%> 
+    	
 <!-- finaliza div de cambio de status-->
 	 </div>
  	 <!--class row termina-->
 	</div>  
 <%end%>
 </div>
-</div>
 
+</div>
+<%= paginate @users%>
