--- a/app/views/supervisor/teachers.html.erb
+++ b/app/views/supervisor/teachers.html.erb
@@ -16,7 +16,7 @@
       </div>
 
       <div class="span5">
-        <h2><%= pluralize @teachers_count-@teachers_suspended, t('.registered_teachers') %></h2>
+        <h2><%= pluralize @teachers_count, t('.registered_teachers') %></h2>
       </div>
       <div class="span2" style="margin-left:20px;">
         <%= link_to t('supervisor.import_teachers'), supervisor_import_users_path(:role => :teacher), :class => "btn small" %>
