--- a/app/views/supervisor/shared/_suspended.html.erb
+++ b/app/views/supervisor/shared/_suspended.html.erb
@@ -31,7 +31,7 @@
 <!--finaliza div edit role-->
                   
 <!-- div del cambio de status-->
-                            <div class="spam6" style="display:none;">
+                            <div class="spam6" style="display:none; margin-left:30px;">
 				              <div id="edit_role_form" >
 				                   <h3>Cambiar el status de usuario</h3>
 				                  <%= form_for @status do |view_status|%>
