--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -39,7 +39,7 @@
     })
   }
 
-  /*var d = 'a.menu, .dropdown-toggle'
+  var d = 'a.menu, .dropdown-toggle'
 
   function clearMenus() {
     $(d).parent('li').removeClass('open')
@@ -50,7 +50,7 @@
     $('body').dropdown()
   })
 
-}( window.jQuery || window.ender );*/
+}( window.jQuery || window.ender );
 
   $(function(){
 	$(".dropdown-toggle").dropdown()
