--- a/app/views/networks/network_cc.html.erb
+++ b/app/views/networks/network_cc.html.erb
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container" style="margin-top:150px;">
 	<div class="content">
 	<div class="span13" style="margin:30px;"></br>
        <%= render :partial => 'new_network'%>
