--- a/app/views/send_reports/_reports_admin.html.erb
+++ b/app/views/send_reports/_reports_admin.html.erb
@@ -71,7 +71,7 @@
 <!-- termina span 12-->
 </br>
 <div>
-<div class="btn right" onclick="mostrarRespuestas(<%=report.id%>)">Responder</div>
+<div class="btn right" onclick="mostrarRespuestas(<%=report.id%>)">Status de la petición</div>
 <div id="prt-<%=report.id%>" style="display:none" >
 <%= render :partial => "send_reports/form_status"%>
 <div class="span10">
