--- a/app/views/send_reports/_user_reports.html.erb
+++ b/app/views/send_reports/_user_reports.html.erb
@@ -71,7 +71,7 @@
 <!-- termina span 12-->
 </br>
 <div>
-<div class="btn right" onclick="mostrarRespuestasw(<%=report.id%>)">Responder</div>
+<div class="btn right" onclick="mostrarRespuestasw(<%=report.id%>)">Status de la petición</div>
 <div id="prt-<%=report.id%>" style="display:none" >
 <h1>Dialogo</h1>
 <div class="span12">
