--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -4,6 +4,24 @@
 </div>
 <%else%>
 <div class="underline">
+<% if current_user.id == @user.id%>
+<%else%>
+
+
+  <% current_user.favorites.each do |favorites|%>  
+  
+   <% @favorite_p = favorites.user_favorite_id%>
+  
+   <%end%>
+
+
+   <% if @user.id == @favorite_p %>
+
+    <%else%>
+   <%= render :partial => "favorites/my_favorite_create"%>
+   <%end%>
+ 
+<%end%>
   <%= image_tag @user.avatar_file.small.url %>
 </div>
 <div class="underline">	
@@ -12,4 +30,9 @@
     <%= tab.wall t('profile.wall'), wall_for_user_path(@user), :class => "actualizaciones" %>
   <% end %>
 </div>
+
+<h3><%="Siguiendo:"%></h3>
+<% @user.favorites.each do |user_favorites| %>
+   <%=link_to image_tag(user_favorites.avatar), user_path(user_favorites.user_favorite_id), :rel => "dashboard-tip", :title => (user_favorites.name) %>
+<%end%>
 <%end%>
