cambios en favoritos cambio de nombre tabla

--- a/app/views/favorites/_my_favorite_users.html.erb
+++ b/app/views/favorites/_my_favorite_users.html.erb
@@ -6,6 +6,6 @@
 	      <%=link_to image_tag(favorite.avatar), user_path(favorite.user_favorite_id), :rel => "dashboard-tip", :title => (favorite.name) %>
 	      <%= link_to "#{favorite.name}", user_path(favorite.user_favorite_id) %>
 	      <%#= link_to "Eliminar",favorite, :confirm => 'Seguro que desea eliminar el usuario de sus favoritos?', :method => :delete %>
-	      <%= link_to 'Destroy', favorite, confirm: 'Are you sure?', method: :delete %>
+	      <%= link_to 'Destroy', Favorite, confirm: 'Are you sure?', method: :delete %>
 </div>     
 <%end%>
