subiendo cambios de cursatest para prueba de amigos

--- a/app/views/favorites/_my_favorite_users.html.erb
+++ b/app/views/favorites/_my_favorite_users.html.erb
@@ -5,7 +5,7 @@
 	      <% @favorite = favorite.id %>
 	      <%=link_to image_tag(favorite.avatar), user_path(favorite.user_favorite_id), :rel => "dashboard-tip", :title => (favorite.name) %>
 	      <%= link_to "#{favorite.name}", user_path(favorite.user_favorite_id) %>
-	      <%#= link_to "Eliminar",favorite, :confirm => 'Seguro que desea eliminar el usuario de sus favoritos?', :method => :delete %>
-	      <%= link_to 'Destroy', favorites, method: :delete %>
-</div>     
+|<%= link_to ' Eliminar ', favorite, :confirm => '¿Estas seguro de querer eliminar de mis favoritos ?', method: :delete%>|
+
+</div>   
 <%end%>
