--- a/app/views/favorites/my_favorite_users.html.erb
+++ b/app/views/favorites/my_favorite_users.html.erb
@@ -5,16 +5,16 @@
 	    <ul class="breadcrumb">
 	      <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
 	      <li><%= link_to("#{@user.first_name} #{@user.last_name}", user_path(@user)) %><span class="divider">/</span></li>
-	      <li class="active"><%= t("profile.wall") %></li>
+	      <li class="active"><%= "Favoritos" %></li>
 	    </ul>  
 	  </div>
 	</div>
 	
-<div class ="span6">
+<div class ="span8">
 <%= render :partial => "my_favorite_users"%>
 </div>
 
-<div class="span9">
+<div class="span7">
 <h1>Usuarios de la red</h1>
  <div class="well">
     <%= form_tag network_members_path, :method => 'get', :class => 'form-search right' do %>
@@ -34,3 +34,9 @@
 <%= render :partial => "shared/footer"%>
 </div>
 </div>
+
+<script type="text/javascript">
+  $(function(){
+    setupAutoScroll();
+  });
+</script>
