subiendo members favoritos

--- a/app/views/home/_members.html.erb
+++ b/app/views/home/_members.html.erb
@@ -1,5 +1,5 @@
 <div class="underline padding-top">
-  <h2><%= t(".members")%></h2>
+  <h2>Mis favoritos</h2>
 </div>
   <ul class="nav-member-avatars">
 	
