--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -55,3 +55,14 @@
  </center>
  </div>
 </div>
+<script>
+/* Click para aparecer desplegable*/
+$(function()
+{
+$(".desplegable-tutoriales").click(function(event) {
+event.preventDefault();
+$(".desplegable-interno").animate({height:'toggle'},150);
+return false;
+});
+});
+</script>
