--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -57,12 +57,14 @@
 </div>
 <script>
 /* Click para aparecer desplegable*/
-$(function()
-{
-$(".desplegable-tutoriales").click(function(event) {
-event.preventDefault();
-$(".desplegable-interno").animate({height:'toggle'},150);
-return false;
-});
-});
+$(document).ready(function() {
+    
+    
+   $(".desplegable-tutoriales").click(function () {
+	  
+        $(".desplegable-interno").fadeToggle("slow", "linear");
+   
+    });
+
+  });
 </script>
