componiendo desplegable de tutorialesbug de reverse

--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -1,9 +1,9 @@
 <script>
 /* Click para aparecer desplegable*/
 $(document).ready(function() {       
-   $(".desplegable-tutoriales").click(function () {
+   $("#desplegable-tutoriales").click(function () {
 	  
-        $(".desplegable-interno").fadeToggle("slow", "linear");
+        $("#desplegable-interno").fadeToggle("slow", "linear");
      });
 
   });
@@ -17,7 +17,7 @@ $(document).ready(function() {
 		</center>
 	    </div>
 	</div>
-<div class="desplegable-interno" style="height:300px;">
+<div id="desplegable-interno" style="height:300px; display:none;">
 <% @tutoriales.each do |tutoriale| %>
     <div class="row with line" style="margin:0px; padding:0px;">
 <div class="user padding-all <%= cycle('odd', 'even') %>">
@@ -48,7 +48,7 @@ $(document).ready(function() {
 </div>
 </div>
 </div>
-<div class="desplegable-tutoriales" style="cursor:pointer;">
+<div id="desplegable-tutoriales" style="cursor:pointer;">
 	<center>
 	<a>Mostrar Todos</a>
 	</center>
