subiendo sin colapse

--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -1,12 +1,12 @@
 <script>
-/* Click para aparecer desplegable*/
+/* Click para aparecer desplegable
 $(document).ready(function() {       
    $("#desplegable-tutoriales").click(function () {
 	  
         $("#desplegable-interno").fadeToggle("slow", "linear");
      });
 
-  });
+  });*/
 </script>
 <div id="tutorial-all" style="width:175px; margin-left:5px; margin-top:-10px;">
 	<div class="tutorial-header">
@@ -53,6 +53,7 @@ $(document).ready(function() {
 	<a>Mostrar Todos</a>
 	</center>
 </div>
+<!--
 <div class="modal hide" id="primer_tutorial" style="display:none;">
  <div class="modal-header">
    <a class="close" data-dismiss="modal" >×</a>
@@ -64,4 +65,4 @@ $(document).ready(function() {
 	<iframe width="520" height="293" src="http://www.youtube.com/embed/2qU_l8FKoqA" frameborder="0" allowfullscreen></iframe>
  </center>
  </div>
-</div>
+</div>-->
