probando tutoriales con el código viejo de embed de youtube

--- a/app/views/tutoriales/_form.html.erb
+++ b/app/views/tutoriales/_form.html.erb
@@ -15,7 +15,7 @@
     </div>
     <div class="row line with row" style="margin-top:10px;">
     <div class= "span9 well">
-	<p> Tienes que ingresar el link de la página, que esta dentro del incertar ya que es el correcto si no no podrás embeber los vídeos de youtube. 
+	<p> Tienes que ingresar el link de la página, que esta dentro del incertar ya que es el correcto si no no podrás embeber los vídeos de youtube, usamos el embed antiguo el link se debe ver mas o menos así "http://www.youtube.com/v/tqtaKkvCFaQ?version=3&amp;hl=es_ES&amp;rel=0". 
     <%= f.submit "Crear", :class => "btn right" %></p>
     </br>
     </div>
