--- a/app/views/tutoriales/_tutorials.html.erb
+++ b/app/views/tutoriales/_tutorials.html.erb
@@ -1,12 +1,12 @@
 <script>
-/* Click para aparecer desplegable
+/* Click para aparecer desplegable*/
 $(document).ready(function() {       
    $("#desplegable-tutoriales").click(function () {
 	  
         $("#desplegable-interno").fadeToggle("slow", "linear");
      });
 
-  });*/
+  });
 </script>
 <div id="tutorial-all" style="width:175px; margin-left:5px; margin-top:-10px;">
 	<div class="tutorial-header">
@@ -17,7 +17,7 @@ $(document).ready(function() {
 		</center>
 	    </div>
 	</div>
-<div id="desplegable-interno" style="height:300px;">
+<div id="desplegable-interno" style="height:300px; display:none;">
 <% @tutoriales.each do |tutoriale| %>
     <div class="row with line" style="margin:0px; padding:0px;">
 <div class="user padding-all <%= cycle('odd', 'even') %>">
@@ -37,7 +37,7 @@ $(document).ready(function() {
  </div>
  <div class="modal-body">
  <center>
-	<iframe width="520" height="293" src=<%="#{tutoriale.link}" %> frameborder="0" allowfullscreen></iframe>
+	<object width="520" height="315"><param name="movie"value="<%= tutoriale.link %>"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="<%= tutoriale.link %>" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true"></embed></object>
  </center>
  </div>
 <div class="modal-footer">
@@ -50,10 +50,10 @@ $(document).ready(function() {
 </div>
 <div id="desplegable-tutoriales" style="cursor:pointer;">
 	<center>
-	<!--<a>Mostrar Todos</a>-->
+	<a>Mostrar Todos</a>
 	</center>
 </div>
-<!--
+
 <div class="modal hide" id="primer_tutorial" style="display:none;">
  <div class="modal-header">
    <a class="close" data-dismiss="modal" >×</a>
@@ -62,7 +62,7 @@ $(document).ready(function() {
  </div>
  <div class="modal-body">
  <center>
-	<iframe width="520" height="293" src="http://www.youtube.com/embed/2qU_l8FKoqA" frameborder="0" allowfullscreen></iframe>
+	<iframe width="520" height="293" src="http://www.youtube.com/embed/rwg4VK5mCKs" frameborder="0" allowfullscreen></iframe>
  </center>
  </div>
-</div>-->
+</div>
