subiendo modificaciones en validación de layout para la barra de notificación de administrador

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,13 +43,16 @@
      })();
    </script>
   <%= user_signed_in? ? render(:partial => "shared/topbar") : render(:partial => 'shared/topbar_with_login') %>
-  <%= render :partial => 'shared/flash', :locals => {:flash => flash} %>
+  <%=  render :partial => 'shared/flash', :locals => {:flash => flash} %>
   	<div class="container">
 	<% 
 	@notificaciones_admin_actualice = NotificacionesAdminActualouse.all
     @notificaciones_admin_actualice_last = NotificacionesAdminActualouse.last
 	%>
+	<%if user_signed_in? %>
 	<%= render :partial => "notificaciones_admin_actualice/header_notification"%>
+	<%else%>
+	<%end%>
 	 </div>
   <%= yield %>
 	
