subiendo tercer mejora de stilos

--- a/app/views/notificaciones_admin_actualice/_header_notification.html.erb
+++ b/app/views/notificaciones_admin_actualice/_header_notification.html.erb
@@ -87,7 +87,7 @@ margin-left:30px;background-color:#f7f7f7;" id="notificaciones-admin">
 	   <h4 style="color:#fff;"><%=actualice.title%>:<div class="btn right" id="notificate-open<%=actualice.id%>"><%= image_tag("notificate-open.png")%></div></h4>
 	  </div>
 	 </div>	
-	   <div class="span5 well" style="display:none; height:70px; overflow:auto;" id="contenidos-notificaciones<%=actualice.id%>">
+	   <div class="span5 well" style="margin-top:5px; background-color:#36897F; color:#fff; display:none; height:70px; overflow:auto;" id="contenidos-notificaciones<%=actualice.id%>">
         <div class="page"><%= actualice.content%></div>
 	 </div>
 	</div>
